objects/Event_Attendee_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>AS_id__c</fullName>
        <label>AttendeeSummary</label>
        <referenceTo>AttendeeSummary__c</referenceTo>
        <relationshipLabel>Event_Attendee_Mapping</relationshipLabel>
        <relationshipName>Event_Attendee_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Event_IDs__c</fullName>
        <description>This is created for Storing Attendee ID and Event ID for Upsert</description>
        <externalId>true</externalId>
        <label>Attendee_Event_IDs</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Attendee_Source__c</fullName>
        <label>Attendee Source</label>
        <picklist>
            <picklistValues>
                <fullName>Walk Ins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Registered</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attendee_Types__c</fullName>
        <label>Attendee Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BadgeQty__c</fullName>
        <defaultValue>1</defaultValue>
        <label>BadgeQty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Badge_Color__c</fullName>
        <label>Badge Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boothleads_Profile__c</fullName>
        <label>Boothleads Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Attendee</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Event Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Admin Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Barcode__c</fullName>
        <label>Custom Barcode</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Display_Badge_Label__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Badge Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Ticket_Label__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Ticket Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiversityType__c</fullName>
        <label>DiversityType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_AttendeeBarcode__c</fullName>
        <externalId>true</externalId>
        <label>AttendeeBarcode</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EA_isBadgePrinted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBadgePrinted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EA_isBadgeSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EA isBadgeSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event_Attendee_Mapping</relationshipLabel>
        <relationshipName>Event_Attendee_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventBriteCount__c</fullName>
        <label>EventBriteCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GuestType__c</fullName>
        <description>This saves the Attendee types of whatever user selects or give an input .</description>
        <label>Badge Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBoothLeadsAttendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBoothLeadsAttendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMatchMakingAttendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMatchMakingAttendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrifileUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrifileUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CheckedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CheckedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Profile__c</fullName>
        <label>MBE Profile</label>
        <referenceTo>MBE_Profile__c</referenceTo>
        <relationshipLabel>Event_Attendee_Mapping</relationshipLabel>
        <relationshipName>Event_Attendee_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobileCheckInTime__c</fullName>
        <label>MobileCheckInTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TicketTypesBP__c</fullName>
        <description>Ticket Types For Badge Printing</description>
        <label>TicketTypes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TicketTypes__c</fullName>
        <description>Ticket Types used  to store the selected tickets by  Event Admin, used in the  Attendee registration</description>
        <inlineHelpText>Ticket Types used  to store the selected tickets by  Event Admin, used in the  Attendee registration</inlineHelpText>
        <label>TicketTypes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UniqNo__c</fullName>
        <label>UniqNo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_With_CreatedDate__c</fullName>
        <label>Update With CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>checkbox_dataTable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkbox dataTable</label>
        <type>Checkbox</type>
    </fields>
    <label>Event_Attendee_Mapping</label>
    <listViews>
        <fullName>GNEMSDC2015</fullName>
        <columns>NAME</columns>
        <columns>AS_id__c</columns>
        <columns>EA_AttendeeBarcode__c</columns>
        <columns>Is_CheckedIn__c</columns>
        <columns>MobileCheckInTime__c</columns>
        <columns>Attendee_Types__c</columns>
        <columns>GuestType__c</columns>
        <columns>TicketTypes__c</columns>
        <columns>TicketTypesBP__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EV_id__c</field>
            <operation>equals</operation>
            <value>QR_EVT_2315_0288955</value>
        </filters>
        <label>GNEMSDC2015</label>
    </listViews>
    <listViews>
        <fullName>LICREE</fullName>
        <columns>NAME</columns>
        <columns>EV_id__c</columns>
        <columns>Attendee_Types__c</columns>
        <columns>TicketTypes__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EV_id__c</field>
            <operation>equals</operation>
            <value>QR_EVT_1213_0074268</value>
        </filters>
        <label>LICREE</label>
    </listViews>
    <listViews>
        <fullName>Long_Island</fullName>
        <columns>NAME</columns>
        <columns>AS_id__c</columns>
        <columns>TicketTypes__c</columns>
        <columns>Attendee_Types__c</columns>
        <columns>Boothleads_Profile__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EV_id__c</field>
            <operation>equals</operation>
            <value>QR_EVT_2015_0271182</value>
        </filters>
        <label>Long Island</label>
    </listViews>
    <listViews>
        <fullName>Susan_2016</fullName>
        <columns>NAME</columns>
        <columns>Boothleads_Profile__c</columns>
        <columns>IsMatchMakingAttendee__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DiversityType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EV_id__c</field>
            <operation>equals</operation>
            <value>QR_EVT_2515_0382689</value>
        </filters>
        <filters>
            <field>Boothleads_Profile__c</field>
            <operation>equals</operation>
            <value>Attendee</value>
        </filters>
        <label>Susan 2016</label>
    </listViews>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>AS_id__c</columns>
        <columns>EA_AttendeeBarcode__c</columns>
        <columns>EV_id__c</columns>
        <columns>TicketTypes__c</columns>
        <columns>Boothleads_Profile__c</columns>
        <columns>Attendee_Types__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EV_id__c</field>
            <operation>equals</operation>
            <value>QR_EVT_2413_0067659</value>
        </filters>
        <label>Special Needs Expo</label>
    </listViews>
    <nameField>
        <displayFormat>EA{0000000000}</displayFormat>
        <label>EA_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event_Attendee_Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>